@@ -301,7 +301,8 @@ thread_rec (DWORD id, int get_context)
       {
 	if (!th->suspended && get_context)
 	  {
-	    if (get_context > 0 && id != current_event.dwThreadId)
+	    if (get_context > 0 && id != current_event.dwThreadId
+		&& id != signal_thread_id)
 	      {
 		DEBUG_EXEC(("SuspendThread tid=0x%x\n", id));
 
@@ -858,7 +859,14 @@ handle_output_debug_string (struct target_waitstatus *ourstatus)
 					 &saved_context,
 					 __COPY_CONTEXT_SIZE, &n)
 		   && n == __COPY_CONTEXT_SIZE)
-	    signal_thread_id = retval;
+	    {
+	      signal_thread_id = retval;
+	      /* We didn't get this context with GetThreadContext, so we
+		 shouldn't write it to the inferior with SetThreadContext */
+	      saved_context.ContextFlags = 0;
+	    }
+	  else
+	    retval = 0;
 	}
     }
 #endif
@@ -1346,7 +1354,6 @@ get_windows_debug_event (struct target_ops *ops,
   event_code = current_event.dwDebugEventCode;
   ourstatus->kind = TARGET_WAITKIND_SPURIOUS;
   th = NULL;
-  signal_thread_id = 0;
 
   switch (event_code)
     {
